Fix properties on mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -131,11 +131,6 @@ img {
  @media screen and ( max-width: 480px ) {
     .container {
         max-width:480px;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
     }
 
     .row {
